--- a/index.html
+++ b/index.html
@@ -252,17 +252,17 @@
 
           <div class="portfolio-content">
             <div class="row">
-              <img src="AI Image enhancer.png" />
+              <img src="SORTING VISUALIZER PLATFORM.png" />
               <div class="layer">
                 <h5>AI Image Enhancer</h5>
                 <p>
-                  An AI-powered image enhancer web app using frontend
-                  technologies and pre-trained AI models. It enables real-time
-                  image upscaling, denoising, and quality enhancement directly
-                  in the browser without backend processing
+                  An web-based platform that visually demonstrates the working
+                   of various sorting algorithms such as Bubble Sort,Selection Sort,
+                  Insertion Sort,Merge Sort,and Quick Sort. It includes dynamic 
+                    animations, adjustable speed controls, and responsive design.
                 </p>
 
-                <a href="https://image-enhancer-79743.web.app/"
+                <a href="https://sorting-visualizer-sudhanshu.vercel.app/"
                   ><i class="bx bx-link-external" style="color: #000"></i
                 ></a>
               </div>
