New Project added

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
           <div class="portfolio-content">
             <div class="row">
-              <img src="SORTING VISUALIZER PLATFORM.png" />
+              <img src="Sorting Visualizer.png" />
               <div class="layer">
                 <h5>AI Image Enhancer</h5>
                 <p>
@@ -268,17 +268,17 @@
               </div>
             </div>
             <div class="row">
-              <img src="Fitness Tracker website.png" />
+              <img src="Fithub Homepage.png" />
               <div class="layer">
-                <h5>Fitness Tracker</h5>
+                <h5>Fithub–Fitness Membership Webpage</h5>
                 <p>
-                  Fitness tracker webpage using frontend-only that calculates
-                  calorie intake, tracks exercise and calories burned, and
-                  visualizes progress using progress bars and device motion
-                  sensor features for real-time activity monitoring.
+                  A fitness membership platform designed
+                   to help users explore training programs, membership plans, and fitness 
+                   services with ease. The layout focuses on clarity, smooth transitions, 
+                   and an enjoyable browsing experience.
                 </p>
 
-                <a href="#"
+                <a href="https://fithub-iota.vercel.app"
                   ><i class="bx bx-link-external" style="color: #000"></i
                 ></a>
               </div>
