made some Changes

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           applications.
         </p>
 
-        <a href="#" class="btn-box">Explore</a>
+        <a href="about.html" class="btn-box">Explore</a>
       </div>
     </section>
 
