--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@
       margin: 0;
       padding: 0;
       line-height: 1.6;
-      background: #f9f9f9;
-      color: #333;
+      background: #263f7f;
+      color: #1d1f94;
     }
     header {
       background: #333;
@@ -77,7 +77,7 @@
 
   <div class="container">
     <h1>About Me</h1>
-    <img src="your-photo.jpg" alt="Your Photo" class="profile-pic">
+    <img src="Profile Picture.png" alt="Your Photo" class="profile-pic">
 
     <h2>Hi, I'm Sudhanshu Singh 👋</h2>
     <p>
@@ -87,21 +87,21 @@
 
     <h2>My Skills</h2>
     <ul>
-      <li>💻 HTML, CSS, JavaScript</li>
-      <li>⚛️ React.js, Tailwind CSS</li>
-      <li>📊 Data Structures & Algorithms</li>
-      <li>🌐 Responsive Web Design</li>
+      <li>HTML, CSS, JavaScript</li>
+      <li>React.js, Tailwind CSS</li>
+      <li>Data Structures & Algorithms</li>
+      <li>Responsive Web Design</li>
     </ul>
 
     <h2>Education</h2>
     <p>
-      🎓 B.Tech in Computer Science & Engineering  
-      [Add your college/university here]
+      🎓 B.Tech in Information Technology  
+      from Ajay Kumar Garg Engineering College,Ghaziabad.
     </p>
 
     <h2>Hobbies</h2>
     <p>
-      📖 Reading tech blogs, 🎮 Gaming, 🎵 Listening to music, 🏋️ Fitness
+      📖 Reading tech blogs <br> 🎮 Gaming <br> 🎵 Listening to music <br> 🏋️ Fitness
     </p>
 
     <div class="social-links">
