project no -3 updated

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             <div class="row">
               <img src="Sorting Visualizer.png" />
               <div class="layer">
-                <h5>AI Image Enhancer</h5>
+                <h5>Sorting Visualizer</h5>
                 <p>
                   An web-based platform that visually demonstrates the working
                    of various sorting algorithms such as Bubble Sort,Selection Sort,
@@ -284,17 +284,16 @@
               </div>
             </div>
             <div class="row">
-              <img src="Real Time  crypto Trading .png" />
+              <img src="Playzz home.png" />
               <div class="layer">
-                <h5>Real-Time Crypto Exchange</h5>
+                <h5>PlayZZ - Esports Tournament Platform </h5>
                 <p>
-                  A real-time crypto trading website using frontend only that
-                  tracks live cryptocurrency prices and helps users calculate
-                  real-time currency exchange values relative to selected
-                  cryptocurrencies for quick conversions.
+                  An esports tournament platform enabling players to register, book slots, and 
+                  compete in online and LAN gaming events.Designed with a responsive UI, seamless 
+                  user flow, and scalable structure for future feature expansion.
                 </p>
 
-                <a href="#"
+                <a href="https://playzz-esports.vercel.app/"
                   ><i class="bx bx-link-external" style="color: #000"></i
                 ></a>
               </div>
